add filenames on codeblocks

--- a/src/pages/fr/core-concepts/astro-components.mdx
+++ b/src/pages/fr/core-concepts/astro-components.mdx
@@ -9,7 +9,7 @@ i18nReady: 'true'
 
 **Si vous connaissez le HTML, vous en savez déjà assez pour écrire votre premier composant Astro.**
 
-La syntaxe du composant Astro est un sur-ensemble de HTML. La syntaxe a été [conçue pour être familière à toute personne ayant de l'expérience dans l'écriture de HTML ou JSX](#differences-entre-astro-et-jsx) , et ajoute la prise en charge de l'inclusion de composants et d'expressions JavaScript. Vous pouvez repérer un composant Astro par son extension de fichier : `.astro` .
+La syntaxe du composant Astro est un sur-ensemble de HTML. La syntaxe a été [conçue pour être familière à toute personne ayant de l'expérience dans l'écriture de HTML ou JSX](#différences-entre-astro-et-jsx) , et ajoute la prise en charge de l'inclusion de composants et d'expressions JavaScript. Vous pouvez repérer un composant Astro par son extension de fichier : `.astro` .
 
 Les composants Astro sont extrêmement flexibles. Souvent, un composant Astro contiendra une **interface utilisateur réutilisable sur la page** , comme un en-tête ou une carte de profil. À d'autres moments, un composant Astro peut contenir un petit extrait de code HTML, comme une collection de balises `<meta>` courantes qui facilitent le travail avec le référencement. Les composants Astro peuvent même contenir la mise en page entière d'une page.
 
@@ -19,7 +19,7 @@ La chose la plus importante à savoir sur les composants Astro est qu'ils **prod
 
 Un composant Astro est composé de deux parties principales : le **Script du composant** et le **Template du composant**. Chacune de ces parties s'occupe de faire une tâche différente, mais ensemble, constituent un cadre facile d'utilisation et assez expressif pour gérer tout ce que vous voulez construire.
 
-```astro
+```astro title="src/components/EmptyComponent.astro"
 ---
 // Script du composant (JavaScript)
 ---
@@ -28,7 +28,7 @@ Un composant Astro est composé de deux parties principales : le **Script du com
 
 Vous pouvez utiliser des composants à l'intérieur d'autres composants pour créer une interface utilisateur de plus en plus complexe. Par exemple, un composant `Button` pourrait être utilisé pour créer un composant `ButtonGroup` comme ceci :
 
-```astro
+```astro title="src/components/ButtonGroup.astro"
 ---
 import Button from './Button.astro';
 ---
@@ -51,7 +51,7 @@ Vous pouvez utiliser le script du composant pour écrire du code JavaScript qui 
 - Récupérer le contenu d'une API ou une base de données
 - Créer des variables que vous voulez référencer dans votre template
 
-```astro
+```astro title="src/components/MyComponent.astro"
 ---
 import SomeAstroComponent from '../components/SomeAstroComponent.astro';
 import SomeReactComponent from '../components/SomeReactComponent.jsx';
@@ -77,7 +77,7 @@ Si vous écrivez du HTML simple ici, votre composant affichera cet HTML dans tou
 
 De plus, la syntaxe du template du composant Astro prend également en charge les **expressions JavaScript**, les **composants importés** et les [**directives spéciales Astro**](/fr/reference/directives-reference/). Les données et les valeurs définies (à la compilation) dans le script du composant peuvent être utilisées dans le template du composant pour produire du HTML dynamiquement créé.
 
-```astro
+```astro title="src/components/MyFavoritePokemon.astro"
 ---
 // Votre script du composant ici !
 import ReactPokemonComponent from '../components/ReactPokemonComponent.jsx';
@@ -108,13 +108,13 @@ Vous pouvez définir des variables JavaScript locales à l'intérieur des barres
 
 :::note[dynamic vs réactif] En utilisant cette approche, vous pouvez inclure des valeurs **dynamiques** qui sont calculées dans le frontmatter. Mais une fois incluses, ces valeurs ne sont pas **réactives** et ne changeront jamais. Les composants Astro sont des templates qui ne s'exécutent qu'une seule fois, au moment de la compilation.
 
-Voir ci-dessous pour plus d'exemples de [différences entre Astro et JSX](#differences-entre-astro-et-jsx) . :::
+Voir ci-dessous pour plus d'exemples de [différences entre Astro et JSX](#différences-entre-astro-et-jsx). :::
 
 ### Variables
 
 Des variables locales peuvent être ajoutées dans le HTML en utilisant la syntaxe des accolades :
 
-```astro
+```astro title="src/components/Variables.astro" "{name}"
 ---
 const name = "Astro";
 ---
@@ -127,7 +127,7 @@ const name = "Astro";
 
 Les variables locales peuvent être utilisées entre accolades pour transmettre des valeurs d'attribut aux éléments HTML et aux composants :
 
-```astro
+```astro title="src/components/DynamicAttributes.astro" "{name}" "${name}"
 ---
 const name = "Astro";
 ---
@@ -171,7 +171,7 @@ Au lieu de cela, utilisez un script côté client pour ajouter le gestionnaire d
 
 Les variables locales peuvent être utilisées dans des fonctions de type JSX pour produire des éléments HTML générés dynamiquement :
 
-```astro
+```astro title="src/components/DynamicHtml.astro" "{item}"
 ---
 const items = ["Chien", "Chat", "Ornithorynque"];
 ---
@@ -184,7 +184,7 @@ const items = ["Chien", "Chat", "Ornithorynque"];
 
 Astro peut afficher conditionnellement du HTML à l'aide d'opérateurs logiques JSX et d'expressions ternaires.
 
-```astro
+```astro title="src/components/ConditionalHtml.astro" "visible"
 ---
 const visible = true;
 ---
@@ -197,7 +197,7 @@ const visible = true;
 
 Vous pouvez également utiliser des balises dynamiques en définissant une variable affectée d'un nom de balise HTML ou d'un composant importé :
 
-```astro
+```astro title="src/components/DynamicTags.astro" /Element|(?<!My)Component/
 ---
 import MyComponent from "./MyComponent.astro";
 const Element = 'div'
@@ -218,7 +218,7 @@ Lors de l'utilisation de balises dynamiques :
 
 Un template de composant Astro peut restituer plusieurs éléments sans avoir besoin de tout envelopper dans un seul `<div>` ou `<>` , contrairement à JavaScript ou JSX.
 
-```astro
+```astro title="src/components/RootElements.astro"
 ---
 // Template with multiple elements
 ---
@@ -228,7 +228,7 @@ Un template de composant Astro peut restituer plusieurs éléments sans avoir be
 
 Cependant, lorsque vous utilisez une expression pour créer dynamiquement plusieurs éléments, vous devez entourer ces éléments dans un **fragment** comme vous le feriez dans du JavaScript ou du JSX. Astro prend en charge l'utilisation de `<Fragment> </Fragment>` ou de la syntaxe abrégée `<> </>` .
 
-```astro
+```astro title="src/components/FragmentWrapper.astro" "<>" "</>"
 ---
 const items = ["Chien", "Chat", "Ornithorynque"];
 ---
@@ -245,7 +245,7 @@ const items = ["Chien", "Chat", "Ornithorynque"];
 
 Les fragments peuvent également être utiles pour éviter d'utiliser des éléments englobants lors de l'ajout [de directives `set:*`](/fr/reference/directives-reference/#sethtml) , comme dans l'exemple suivant :
 
-```astro
+```astro title="src/components/SetHtml.astro" "Fragment"
 ---
 const htmlString = '<p>Contenu HTML brut</p>';
 ---
@@ -269,7 +269,7 @@ Dans Astro, vous utilisez le format standard `kebab-case` pour tous les attribut
 
 Dans Astro, vous pouvez utiliser des commentaires HTML standard ou des commentaires de style JavaScript.
 
-```astro
+```astro title="example.astro"
 ---
 ---
 <!-- La syntaxe de commentaire HTML est valide dans les fichiers .astro -->
@@ -284,7 +284,7 @@ Un composant Astro peut définir et accepter des "props". Ces props deviennent a
 
 Voici un exemple de composant qui reçoit un prop nommé `greeting` et un prop nommé `name`. Notez que les props à recevoir sont déstructurés de l'objet global `Astro.props`.
 
-```astro
+```astro "Astro.props"
 ---
 // src/components/GreetingHeadline.astro
 // Utilisation: <GreetingHeadline greeting="Comment ça va" name="Partenaire" />
@@ -295,7 +295,7 @@ const { greeting, name } = Astro.props;
 
 Ce composant, lorsqu'il est importé et rendu dans d'autres composants standards,  Composants Layout ou pages Astro, peut recevoir ces props en tant qu'attributs :
 
-```astro
+```astro /(\w+)=\S+/
 ---
 // src/components/GreetingCard.astro
 import GreetingHeadline from './GreetingHeadline.astro';
@@ -308,7 +308,7 @@ const name = "Astro"
 
 Vous pouvez également définir le type de vos props avec TypeScript en créant une interface nommée `Props`. Astro sélectionnera automatiquement l'interface `Props` dans le Script du Composant et donnera des avertissements/erreurs de type. Ces props peuvent également recevoir des valeurs par défaut lorsqu'ils sont déstructurés à partir d' `Astro.props` .
 
-```astro
+```astro ins={3-6}
 ---
 // Votre script du composant ici !
 ---
@@ -322,7 +322,7 @@ Vous pouvez également définir le type de vos props avec TypeScript en créant 
 
 Les props de composant peuvent recevoir des valeurs par défaut à utiliser lorsqu'aucune n'est fournie
 
-```astro
+```astro ins="= \"Hello\"" ins="= \"Astronaut\""
 ---
 // src/components/GreetingHeadline.astro
 const { greeting = "Salut", name = "Astronaute" } = Astro.props;
@@ -338,7 +338,7 @@ Par défaut, tous les éléments enfants passés à un composant seront rendus d
 
 :::note Contrairement aux *props* , qui sont des attributs passés à un composant Astro disponibles pour une utilisation dans votre composant avec `Astro.props` , *les emplacements* restituent les éléments HTML enfants là où ils sont placés. :::
 
-```astro
+```astro "<slot />"
 ---
 // src/components/Wrapper.astro
 import Header from './Header.astro';
@@ -356,7 +356,7 @@ const { title } = Astro.props
 </div>
 ```
 
-```astro
+```astro {6-7}
 ---
 // src/pages/fred.astro
 import Wrapper from '../components/Wrapper.astro';
@@ -375,7 +375,7 @@ Ce modèle est à la base d'un Composant Layout dans Astro : une page entière d
 
 Un composant Astro peut également avoir des emplacements nommés. Cela vous permet de ne faire passer que des éléments HTML avec le nom d'emplacement (slot) correspondant, au niveau de l'emplacement.
 
-```astro
+```astro /<slot .*?/>/
 ---
 // src/components/Wrapper.astro
 import Header from './Header.astro';
@@ -395,7 +395,7 @@ const { title } = Astro.props
 </div>
 ```
 
-```astro
+```astro /slot=".*?"/
 ---
 // src/pages/fred.astro
 import Wrapper from '../components/Wrapper.astro';
@@ -417,7 +417,7 @@ Utilisez un attribut `slot="my-slot"` sur l'élément enfant que vous souhaitez 
 
 Les emplacements peuvent également restituer **du contenu de repli** . Lorsqu'il n'y a pas d'enfants correspondants passés à un emplacement, un élément `<slot />` fera le rendu de ses propres enfants.
 
-```astro
+```astro {14}
 ---
 // src/components/Wrapper.astro
 import Header from './Header.astro';
@@ -443,7 +443,7 @@ Les balises CSS `<style>` sont également prises en charge à l'intérieur du te
 
 Ils peuvent être utilisés pour styliser vos composants, et toutes les règles de style sont automatiquement limitées à la portée du composant lui-même pour éviter les conflits CSS dans les applications volumineuses.
 
-```astro
+```astro title="src/components/StyledHeading.astro"
 ---
 // Le script du composant ici !
 ---
