--- a/src/pages/fr/guides/deploy/github.mdx
+++ b/src/pages/fr/guides/deploy/github.mdx
@@ -87,7 +87,7 @@ Astro maintient l'action officielle `withastro/action` pour déployer vos projet
     ```
 
     :::note
-    L'action astro prend quelques entrées optionnelles. Ceux-ci peuvent être fournis en décommentant la ligne `with:` et l'entrée que vous voulez utiliser.
+    L'action astro prend quelques entrées optionnelles. Celles-ci peuvent être fournies en décommentant la ligne `with:` et l'entrée que vous voulez utiliser.
     :::
 
     :::caution
