--- a/src/pages/en/upgrade-astro.mdx
+++ b/src/pages/en/upgrade-astro.mdx
@@ -11,35 +11,98 @@ This guide will help you migrate from Astro v1 to Astro v2.
 
 Need to upgrade an older project to v1? See our [older migration guide](https://github.com/withastro/docs/blob/aa7e4f568f418657eba297778729a8aee2a36409/src/pages/en/migrate.mdx).
 
-You can update your project's version of Astro to the latest version using your package manager. If you're using Astro integrations, please also update those to the latest version.
-<PackageManagerTabs>
-  <Fragment slot="npm">
-  ```shell
-  # updates the astro dependency:
-  npm upgrade astro
-  # or, to update all dependencies:
-  npm upgrade
-  ```
-  </Fragment>
-  <Fragment slot="pnpm">
-  ```shell
-  # updates the astro dependency:
-  pnpm upgrade astro
-  # or, to update all dependencies:
-  pnpm upgrade
-  ```
-  </Fragment>
-  <Fragment slot="yarn">
-  ```shell
-  # updates the astro dependency:
-  yarn upgrade astro
-  # or, to update all dependencies:
-  yarn upgrade
-  ```
-  </Fragment>
-</PackageManagerTabs>
+## Upgrade steps
 
-This guide includes major highlights and instructions on how to handle breaking changes when upgrading from v1.x and v2.0-beta releases. See [the changelog](https://github.com/withastro/astro/blob/main/packages/astro/CHANGELOG.md) for full release notes.
+1. You can check your version of Astro, and any official Astro integrations (`@astrojs/*`), in `package.json` at the root of your project. These may be in `devDependencies` and/or `dependencies`:
+
+  ```json "@astrojs/" {6}
+  "devDependencies": {
+    "@astrojs/react": "^1.2.2",
+    "@astrojs/svelte": "^1.0.2",
+    "@astropub/icons": "^0.1.1",
+    "accessible-astro-components": "^1.4.5",
+    "astro": "2.0.0-beta.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.0.0",
+    "svelte": "^3.47.0"
+  },
+  "dependencies": {
+    "@astrojs/image": "0.13.0-beta.0",
+    "@astrojs/rss": "^2.0.0",
+    "@astrojs/vue": "^1.2.1",
+    "vue": "^3.2.41"
+  }
+  ```
+
+2. Update your project's version of Astro to the latest version using your package manager. If you're using Astro integrations, please also update those to the latest version.
+
+  <PackageManagerTabs>
+    <Fragment slot="npm">
+    ```shell
+    # upgrades to Astro v2.x:
+    npm i astro@latest
+    # to update all dependencies:
+    npm upgrade
+    ```
+    </Fragment>
+    <Fragment slot="pnpm">
+    ```shell
+    # upgrades to Astro v2.x:
+    pnpm i astro@latest
+    # to update all dependencies:
+    pnpm upgrade
+    ```
+    </Fragment>
+    <Fragment slot="yarn">
+    ```shell
+    # upgrades to Astro v2.x:
+    yarn add astro@latest
+    # to update all dependencies:
+    yarn upgrade
+    ```
+    </Fragment>
+  </PackageManagerTabs>
+
+3. Check that you are running **at least Node `16.12.0`**. In v2.0, Astro dropped support for Node `14`:
+
+  ```sh
+  node -v
+  ```
+  
+  If necessary, follow the instructions to [install Node.js](https://docs.npmjs.com/downloading-and-installing-node-js-and-npm) via the command line.
+
+
+## Update your code
+
+Many projects will not need any changes to the codebase! Your upgrade may now be complete.  
+
+But, this upgrade does bring:
+
+- **Vite 4**
+
+  Astro should handle everything under the hood!
+
+- **the removal of several previously-deprecated flags**
+
+  Using one of the config options called out below? That's got to go!
+
+- **a new, unified location for your built assets**
+
+  Have some deploy config that depends on chunks? See below!
+
+- **a redesign of Markdown and MDX plugin configuration**
+
+  Using plugins in Markdown and MDX? See our simplified setup!
+
+- **a new, reserved folder `src/content/` for our new Collections API**
+
+  If you had your own folder called `src/content/`, we'd like a word with you!
+
+- **three experimental flags into the codebase**
+
+  You don't need these flags to get the goodies. Open to everyone now!
+
+So if your project doesn't work as expected after upgrading to v2.0, then check this guide for major highlights and instructions on how to handle breaking changes when upgrading from v1.x and v2.0-beta releases. See [the changelog](https://github.com/withastro/astro/blob/main/packages/astro/CHANGELOG.md) for full release notes.
 
 
 ## Astro 2.0 Updates
