links to update code section

--- a/src/pages/en/upgrade-astro.mdx
+++ b/src/pages/en/upgrade-astro.mdx
@@ -80,27 +80,27 @@ But, this upgrade does bring:
 
 - **Vite 4**
 
-  Astro should handle everything under the hood!
+  Astro *should* [handle everything](#updated-vite-4) for you under the hood!
 
 - **the removal of several previously-deprecated flags**
 
-  Using one of the config options called out below? That's got to go!
+  Using one of the [config options mentioned below](#astro-20-breaking-changes)? That's got to go!
 
 - **a new, unified location for your built assets**
 
-  Have some deploy config that depends on chunks? See below!
+  Have some [deploy config that depends on chunks](#added-_astro-folder-for-build-assets)? See below!
 
 - **a redesign of Markdown and MDX plugin configuration**
 
-  Using plugins in Markdown and MDX? See our simplified setup!
+  Using plugins in [Markdown](#changed-markdown-plugin-configuration) and [MDX](#changed-mdx-plugin-configuration)? Covert to our simplified options!
 
 - **a new, reserved folder `src/content/` for our new Collections API**
 
-  If you had your own folder called `src/content/`, we'd like a word with you!
+  If you [have your own folder called `src/content/`](#added-srccontent), we'd like a word with you!
 
 - **three experimental flags into the codebase**
 
-  You don't need these flags to get the goodies. Open to everyone now!
+  You [don't need these flags](#astro-20-experimental-flags-removed) to get the goodies. Open to everyone now!
 
 So if your project doesn't work as expected after upgrading to v2.0, then check this guide for major highlights and instructions on how to handle breaking changes when upgrading from v1.x and v2.0-beta releases. See [the changelog](https://github.com/withastro/astro/blob/main/packages/astro/CHANGELOG.md) for full release notes.
 
