makng more guide-y, up to and including deprecations

--- a/src/pages/en/upgrade-astro.mdx
+++ b/src/pages/en/upgrade-astro.mdx
@@ -69,10 +69,9 @@ Need to upgrade an older project to v1? See our [older migration guide](https://
   node -v
   ```
   
-  If necessary, follow the instructions to [install Node.js](https://docs.npmjs.com/downloading-and-installing-node-js-and-npm) via the command line.
+  If necessary, follow the instructions to [install Node.js](https://docs.npmjs.com/downloading-and-installing-node-js-and-npm) via the command line. You may also need to verify that your [deployment environment](/en/guides/deploy/) meets this new minimum standard. You may wish to create a `.nmvrc` file to specify this version.
 
-
-## Update your code
+## Do I need to update my code?
 
 Many projects will not need any changes to the codebase! Your upgrade may now be complete.  
 
@@ -92,13 +91,13 @@ But, this upgrade does bring:
 
 - **a redesign of Markdown and MDX plugin configuration**
 
-  Using plugins in [Markdown](#changed-markdown-plugin-configuration) and [MDX](#changed-mdx-plugin-configuration)? Covert to our simplified options!
+  Using plugins in [Markdown](#changed-markdown-plugin-configuration) and [MDX](#changed-mdx-plugin-configuration)? Convert your config!
 
 - **a new, reserved folder `src/content/` for our new Collections API**
 
   If you [have your own folder called `src/content/`](#added-srccontent), we'd like a word with you!
 
-- **three experimental flags into the codebase**
+- **three exciting features that are no longer experimental**
 
   You [don't need these flags](#astro-20-experimental-flags-removed) to get the goodies. Open to everyone now!
 
@@ -111,10 +110,33 @@ So if your project doesn't work as expected after upgrading to v2.0, then check 
 
 The minimum supported version of NodeJS is now 16.12.0.
 
+#### What should I check?
+
+Both your development environment and your deployment environment must now meet this minimum standard.
+
+1. Check your local version of node using:
+
+    ```sh
+    node -v
+ 
+    ```
+    If your local development environment needs upgrading to Node 16, [install Node.js](https://docs.npmjs.com/downloading-and-installing-node-js-and-npm) via the command line.
+
+
+2. Check your [deployment environment's](/en/guides/deploy/) own documentation to verify that they support Node 16. 
+
+    You may be able to specify Node 16.12.0 for your Astro project either in a dashboard, or a `.nvmrc` file.
+
 
 ### Updated: Vite 4
 
-Astro v2.0 has upgraded from Vite 3 to [Vite 4](https://vitejs.dev/). We've handled most of the upgrade for you inside of Astro; however, some subtle Vite behaviors may still change between versions. 
+Astro v2.0 upgrades from Vite 3 to [Vite 4](https://vitejs.dev/). 
+
+#### What should I do?
+
+There should be no changes to your code necessary! Enjoy [many internal improvements under-the-hood](https://vitejs.dev/blog/announcing-vite4.html) without changing a thing.
+
+We've handled most of the upgrade for you inside of Astro; however, some subtle Vite behaviors may still change between versions. 
 
 Refer to the official [Vite Migration Guide](https://vitejs.dev/guide/migration.html) if you run into trouble.
 
@@ -123,15 +145,36 @@ Refer to the official [Vite Migration Guide](https://vitejs.dev/guide/migration.
 
 ### Removed: `legacy.astroFlavoredMarkdown`
 
-In 1.0 Astro moved the old Astro Flavored Markdown (also known as Components in Markdown) to a legacy feature. This change removes the `legacy.astroFlavoredMarkdown` option completely.
+In 1.0, Astro moved the old Astro Flavored Markdown (also known as Components in Markdown) to a legacy feature. 
 
-In 2.0 this feature is not available in Astro at all. We recommend [migrating to MDX with the integration](/en/guides/integrations-guide/mdx/) for those were still using this feature in 1.x. See our older migration guide for more about [converting existing Mardown files to MDX](https://github.com/withastro/docs/blob/aa7e4f568f418657eba297778729a8aee2a36409/src/pages/en/migrate.mdx#converting-existing-md-files-to-mdx).
+Astro 2.0 removes the `legacy.astroFlavoredMarkdown` option completely. Importing and using components in `.md` files will no longer work.
+
+#### What should I do?
+
+This legacy flag is no longer available in Astro and should be removed:
+
+```astro del={3-5}
+// astro.config.mjs
+export default defineConfig({
+	legacy: {
+		astroFlavoredMarkdown: true,
+	},
+
+```
+
+If you were using this feature in 1.x, we recommend [using the MDX integration](/en/guides/integrations-guide/mdx/) which allows you to include components and JSX expressions in your Markdown.
+
+See our older upgrade guide for more about [converting existing Mardown files to MDX](https://github.com/withastro/docs/blob/aa7e4f568f418657eba297778729a8aee2a36409/src/pages/en/migrate.mdx#converting-existing-md-files-to-mdx).
 
 ### Removed: `Astro.resolve()`
 
-In 0.24 Astro deprecated `Astro.resolve()`. This change removes the option completely.
+In 0.24, Astro deprecated `Astro.resolve()` for getting resolved URLs to assets that you might want to reference in the browser.
 
-In 2.0 this feature is not available in Astro at all. You can resolve asset paths using `import` instead. For example:
+Astro 2.0 removes this option entirely. `Astro.resolve()` in your code will cause an error.
+
+#### What should I do?
+
+Resolve asset paths using `import` instead. For example:
 
 ```astro
 ---
@@ -142,13 +185,17 @@ import imageUrl from './image.png';
 <img src={imageUrl} />
 ```
 
-See the [v0.24 migration guide](https://github.com/withastro/docs/blob/aa7e4f568f418657eba297778729a8aee2a36409/src/pages/en/migrate.mdx#deprecated-astroresolve) for more information.
+See the [v0.24 upgrade guide](https://github.com/withastro/docs/blob/aa7e4f568f418657eba297778729a8aee2a36409/src/pages/en/migrate.mdx#deprecated-astroresolve) for more information.
 
 ### Removed: `Astro.fetchContent()`
 
-In 0.26 Astro deprecated `Astro.fetchContent()`. This change removes the option entirely.
+In 0.26, Astro deprecated `Astro.fetchContent()`for fetching data from your local Markdown files.
 
-In 2.0 this feature is not available in Astro at all. Use [`Astro.glob()`](/en/guides/imports/#astroglob) instead to fetch Markdown files, or migrate to the [Content Collections](/en/guides/content-collections/) feature.
+Astro 2.0 removes this option entirely. `Astro.fetchContent()` in your code will cause an error.
+
+#### What should I do?
+
+Use [`Astro.glob()`](/en/guides/imports/#astroglob) to fetch Markdown files, or migrate to the [Content Collections](/en/guides/content-collections/) feature.
 
 ```js
 let allPosts = await Astro.glob('./posts/*.md');
@@ -156,9 +203,14 @@ let allPosts = await Astro.glob('./posts/*.md');
 
 ### Removed: `Astro.canonicalURL`
 
-In 1.0 Astro deprecated `Astro.canonicalURL`. This change removes the option entirely.
+In 1.0, Astro deprecated `Astro.canonicalURL` for constructing a canonical URL. 
 
-In 2.0 this feature is not available in Astro at all. Use `Astro.url` instead to construct the canonical URL.
+
+Astro 2.0 removes this option entirely. `Astro.canonicalURL()` in your code will cause an error.
+
+#### What should I do?
+
+Use `Astro.url` to construct the canonical URL.
 
 ```js
 const canonicalURL = new URL(Astro.url.pathname, Astro.site);
