edits to list of changes

--- a/src/pages/en/upgrade-astro.mdx
+++ b/src/pages/en/upgrade-astro.mdx
@@ -79,15 +79,15 @@ But, this upgrade does bring:
 
 - **Vite 4**
 
-  Astro *should* [handle everything](#updated-vite-4) for you under the hood!
+  Astro *should* [handle everything](#updated-vite-4) for you under the hood! But still, stuff to know!
 
-- **the removal of several previously-deprecated flags**
+- **the complete removal of several previously-deprecated items**
 
-  Using one of the [config options mentioned below](#astro-20-breaking-changes)? That's got to go!
+  Using one of the [deprecated options mentioned below](#astro-20-breaking-changes)? That's got to go!
 
 - **a new, unified location for your built assets**
 
-  Have some [deploy config that depends on chunks](#added-_astro-folder-for-build-assets)? See below!
+  Have a [deploy config that depends on chunks](#added-_astro-folder-for-build-assets)? See below!
 
 - **a redesign of Markdown and MDX plugin configuration**
 
