--- a/src/pages/fr/core-concepts/astro-components.mdx
+++ b/src/pages/fr/core-concepts/astro-components.mdx
@@ -1,7 +1,7 @@
 ---
 layout: "~/layouts/MainLayout.astro"
 title: Composants
-description: Une introduction à la syntaxe des composants en .astro.
+description: Une introduction à la syntaxe des composants en.astro.
 i18nReady: 'true'
 ---
 
@@ -9,9 +9,9 @@ i18nReady: 'true'
 
 **Si vous connaissez le HTML, vous en savez déjà assez pour écrire votre premier composant Astro.**
 
-La syntaxe du composant Astro est un sur-ensemble de HTML. La syntaxe a été [conçue pour être familière à toute personne ayant de l'expérience dans l'écriture de HTML ou JSX](#différences-entre-astro-et-jsx) , et ajoute la prise en charge de l'inclusion de composants et d'expressions JavaScript. Vous pouvez repérer un composant Astro par son extension de fichier : `.astro` .
+La syntaxe du composant Astro est un sur-ensemble de HTML. La syntaxe a été [conçue pour être familière à toute personne ayant de l'expérience dans l'écriture de HTML ou JSX](#différences-entre-astro-et-jsx), et ajoute la prise en charge de l'inclusion de composants et d'expressions JavaScript. Vous pouvez repérer un composant Astro par son extension de fichier : `.astro`.
 
-Les composants Astro sont extrêmement flexibles. Souvent, un composant Astro contiendra une **interface utilisateur réutilisable sur la page** , comme un en-tête ou une carte de profil. À d'autres moments, un composant Astro peut contenir un petit extrait de code HTML, comme une collection de balises `<meta>` courantes qui facilitent le travail avec le référencement. Les composants Astro peuvent même contenir la mise en page entière d'une page.
+Les composants Astro sont extrêmement flexibles. Souvent, un composant Astro contiendra une **interface utilisateur réutilisable sur la page**, comme un en-tête ou une carte de profil. À d'autres moments, un composant Astro peut contenir un petit extrait de code HTML, comme une collection de balises `<meta>` courantes qui facilitent le travail avec le référencement. Les composants Astro peuvent même contenir la mise en page entière d'une page.
 
 La chose la plus importante à savoir sur les composants Astro est qu'ils **produisent du HTML lors de la compilation.** Même si vous exécutez du code JavaScript à l'intérieur de vos composants, tout s'exécutera à l'avance, supprimé de la page finale que vous envoyez à vos utilisateurs. Le résultat est un site plus rapide, avec une empreinte JavaScript nulle ajoutée par défaut.
 
@@ -57,7 +57,7 @@ import SomeAstroComponent from '../components/SomeAstroComponent.astro';
 import SomeReactComponent from '../components/SomeReactComponent.jsx';
 import someData from '../data/pokemon.json';
 
-// Accédez aux propriétés passées dans le composant, comme `<X title="Hello, World" />`
+// Accéder aux propriétés passées dans le composant, comme `<X title="Hello, World" />`
 const {title} = Astro.props;
 // Récupérer des données externes, même depuis une API privée ou une base de données
 const data = await fetch('SOME_SECRET_API_URL/users').then(r => r.json());
@@ -65,13 +65,13 @@ const data = await fetch('SOME_SECRET_API_URL/users').then(r => r.json());
 <!-- Votre template ici ! -->
 ```
 
-Les barres de code sont conçues pour garantir que le code JavaScript que vous écrivez à l'intérieur "ne puisse pas s'échapper". Ce code n'apparaîtra pas dans le code final de votre page et ne sera pas visible à vos utilisateur. Vous pouvez écrire du code JavaScript coûteux (en terme de performance) ou sensible (comme un appel à votre base de données privée) sans vous soucier qu'il se retrouve dans le navigateur de votre utilisateur.
+Les barres de code sont conçues pour garantir que le code JavaScript que vous écrivez à l'intérieur "ne puisse pas s'échapper". Ce code n'apparaîtra pas dans le code final de votre page et ne sera pas visible à vos utilisateur. Vous pouvez écrire du code JavaScript coûteux (en terme de performance) ou sensible (comme un appel à votre base de données privée) sans vous soucier qu'il se retrouve dans le navigateur l'utilisateur.
 
 :::tip Vous pouvez même écrire du TypeScript dans votre script de composant ! :::
 
 ### Le Template du composant
 
-Sous le script du composant, se trouve le template du composant. Le template du composant détermine le HTML résultant de votre composant.
+En dessous du script du composant se trouve le template du composant. Le template du composant détermine le HTML résultant de votre composant.
 
 Si vous écrivez du HTML simple ici, votre composant affichera cet HTML dans toutes les pages où il est importé et utilisé.
 
@@ -81,7 +81,7 @@ De plus, la syntaxe du template du composant Astro prend également en charge le
 ---
 // Votre script du composant ici !
 import ReactPokemonComponent from '../components/ReactPokemonComponent.jsx';
-const myFavoritePokemon = [/* ... */];
+const myFavoritePokemon = [/*... */];
 ---
 <!-- les commentaires HTML sont supportés ! -->
 
@@ -104,11 +104,13 @@ const myFavoritePokemon = [/* ... */];
 
 ## Expressions JSX
 
-Vous pouvez définir des variables JavaScript locales à l'intérieur des barres de code du script du composant dans un composant Astro. Vous pouvez ensuite injecter ces variables dans le template HTML du composant à en utilisant des expressions de type JSX !
+Vous pouvez définir des variables JavaScript locales dans le script du composant Astro. Vous pouvez ensuite injecter ces variables dans le template HTML du composant à en utilisant des expressions de type JSX !
 
-:::note[dynamic vs réactif] En utilisant cette approche, vous pouvez inclure des valeurs **dynamiques** qui sont calculées dans le frontmatter. Mais une fois incluses, ces valeurs ne sont pas **réactives** et ne changeront jamais. Les composants Astro sont des templates qui ne s'exécutent qu'une seule fois, au moment de la compilation.
+:::note[dynamique vs réactif]
+En utilisant cette approche, vous pouvez inclure des valeurs **dynamiques** qui sont calculées dans le frontmatter. Mais une fois incluses, ces valeurs ne sont pas **réactives** et ne changeront jamais. Les composants Astro sont des templates qui ne s'exécutent qu'une seule fois, au moment de la compilation.
 
-Voir ci-dessous pour plus d'exemples de [différences entre Astro et JSX](#différences-entre-astro-et-jsx). :::
+Voir ci-dessous pour plus d'exemples de [différences entre Astro et JSX](#différences-entre-astro-et-jsx).
+:::
 
 ### Variables
 
@@ -136,13 +138,14 @@ const name = "Astro";
 <MyComponent templateLiteralNameAttribute={`MonNomEst${name}`} />
 ```
 
-:::caution Les attributs HTML seront convertis en chaînes, il n'est donc pas possible de passer des fonctions et des objets aux éléments HTML. Par exemple, vous ne pouvez pas affecter un gestionnaire d'événements à un élément HTML dans un composant Astro :
+:::caution
+Les attributs HTML seront convertis en chaînes, il n'est donc pas possible de passer des fonctions et des objets aux éléments HTML. Par exemple, vous ne pouvez pas affecter un gestionnaire d'événements à un élément HTML dans un composant Astro :
 
 ```astro
 ---
 // dont-do-this.astro
 function handleClick () {
-console.log("boutton cliqué!");
+  console.log("boutton cliqué!");
 }
 ---
 <!-- ❌ Cela ne marche pas! ❌ -->
@@ -164,7 +167,6 @@ Au lieu de cela, utilisez un script côté client pour ajouter le gestionnaire d
   document.getElementById("button").addEventListener("click", handleClick);
 </script>
 ```
-
 :::
 
 ### HTML dynamique
@@ -210,13 +212,13 @@ const Component = MyComponent;
 
 Lors de l'utilisation de balises dynamiques :
 
-- **Les noms de variables doivent commencer par une lettre majuscules.** Par exemple, utilisez `Element` , et non `element` . Sinon, Astro essaiera de restituer le nom de votre variable sous la forme d'une balise HTML littéralement.
+- **Les noms de variables doivent commencer par une lettre majuscules.** Par exemple, utilisez `Element`, et non `element`. Sinon, Astro essaiera de restituer le nom de votre variable sous la forme d'une balise HTML littéralement.
 
 - **Les directives d'hydratation ne sont pas prises en charge.** Lorsque vous utilisez [les directives d'hydratation `client:*`](/fr/core-concepts/framework-components/#hydratation-des-composants-interactifs), Astro doit savoir quels composants regrouper pour la production, et le modèle de balise dynamique empêche cela de fonctionner.
 
 ### Fragments et éléments multiples
 
-Un template de composant Astro peut restituer plusieurs éléments sans avoir besoin de tout envelopper dans un seul `<div>` ou `<>` , contrairement à JavaScript ou JSX.
+Un template de composant Astro peut restituer plusieurs éléments sans avoir besoin de tout envelopper dans un seul `<div>` ou `<>`, contrairement à JavaScript ou JSX.
 
 ```astro title="src/components/RootElements.astro"
 ---
@@ -226,7 +228,7 @@ Un template de composant Astro peut restituer plusieurs éléments sans avoir be
 <p>Astro prend en charge plusieurs éléments à la racine du template</p>
 ```
 
-Cependant, lorsque vous utilisez une expression pour créer dynamiquement plusieurs éléments, vous devez entourer ces éléments dans un **fragment** comme vous le feriez dans du JavaScript ou du JSX. Astro prend en charge l'utilisation de `<Fragment> </Fragment>` ou de la syntaxe abrégée `<> </>` .
+Cependant, lorsque vous utilisez une expression pour créer dynamiquement plusieurs éléments, vous devez entourer ces éléments dans un **fragment** comme vous le feriez dans du JavaScript ou du JSX. Astro prend en charge l'utilisation de `<Fragment> </Fragment>` ou de la syntaxe abrégée `<> </>`.
 
 ```astro title="src/components/FragmentWrapper.astro" "<>" "</>"
 ---
@@ -243,7 +245,7 @@ const items = ["Chien", "Chat", "Ornithorynque"];
 </ul>
 ```
 
-Les fragments peuvent également être utiles pour éviter d'utiliser des éléments englobants lors de l'ajout [de directives `set:*`](/fr/reference/directives-reference/#sethtml) , comme dans l'exemple suivant :
+Les Fragments peuvent aussi être utiles pour éviter d'utiliser des éléments conteneurs lors de l'ajout de [directives `set:*`](/fr/reference/directives-reference/#sethtml), comme dans l'exemple suivant :
 
 ```astro title="src/components/SetHtml.astro" "Fragment"
 ---
@@ -258,7 +260,7 @@ La syntaxe du composant Astro est un sur-ensemble de HTML. Il a été conçu pou
 
 #### Les attributs
 
-Dans Astro, vous utilisez le format standard `kebab-case` pour tous les attributs HTML au lieu du `camelCase` utilisé dans JSX. Cela fonctionne même pour `class` , qui n'est pas pris en charge par React.
+Dans Astro, vous utilisez le format standard `kebab-case` pour tous les attributs HTML au lieu du `camelCase` utilisé dans JSX. Cela fonctionne même pour `class`, qui n'est pas pris en charge par React.
 
 ```jsx
 <div className="box" dataValue="3" />
@@ -272,7 +274,7 @@ Dans Astro, vous pouvez utiliser des commentaires HTML standard ou des commentai
 ```astro title="example.astro"
 ---
 ---
-<!-- La syntaxe de commentaire HTML est valide dans les fichiers .astro -->
+<!-- La syntaxe de commentaire HTML est valide dans les fichiers.astro -->
 {/* La syntaxe des commentaires JS est également valide */}
 ```
 
@@ -290,10 +292,10 @@ Voici un exemple de composant qui reçoit un prop nommé `greeting` et un prop n
 // Utilisation: <GreetingHeadline greeting="Comment ça va" name="Partenaire" />
 const { greeting, name } = Astro.props;
 ---
-<h2>{greeting}, {name}!</h2>
+<h2>{greeting}, {name} !</h2>
 ```
 
-Ce composant, lorsqu'il est importé et rendu dans d'autres composants standards,  Composants Layout ou pages Astro, peut recevoir ces props en tant qu'attributs :
+Ce composant, lorsqu'il est importé et utilisé dans d'autres composants standards, Composants Layout ou pages Astro, peut recevoir ces props sous forme d'attributs :
 
 ```astro /(\w+)=\S+/
 ---
@@ -301,12 +303,12 @@ Ce composant, lorsqu'il est importé et rendu dans d'autres composants standards
 import GreetingHeadline from './GreetingHeadline.astro';
 const name = "Astro"
 ---
-<h1>Carte de vœux</h1>
+<h1>Carte de bienvenue</h1>
 <GreetingHeadline greeting="Salut" name={name} />
 <p>J'espère que vous passez une merveilleuse journée !</p>
 ```
 
-Vous pouvez également définir le type de vos props avec TypeScript en créant une interface nommée `Props`. Astro sélectionnera automatiquement l'interface `Props` dans le Script du Composant et donnera des avertissements/erreurs de type. Ces props peuvent également recevoir des valeurs par défaut lorsqu'ils sont déstructurés à partir d' `Astro.props` .
+Vous pouvez également définir le type de vos props avec TypeScript en créant une interface nommée `Props`. Astro sélectionnera automatiquement l'interface `Props` dans le Script du Composant et donnera des avertissements/erreurs de type. Ces props peuvent également recevoir des valeurs par défaut lorsqu'ils sont déstructurés à partir d' `Astro.props`.
 
 ```astro ins={3-6}
 ---
@@ -330,13 +332,13 @@ const { greeting = "Salut", name = "Astronaute" } = Astro.props;
 <h2>{greeting}, {name}!</h2>
 ```
 
-## Les emplacements
+## Les emplacements (slots)
 
 L'élément `<slot />` est un emplacement réservé pour du contenu HTML externe, vous permettant d'injecter des éléments enfants depuis d'autres fichiers, dans le template de votre composant.
 
 Par défaut, tous les éléments enfants passés à un composant seront rendus dans son `<slot />`
 
-:::note Contrairement aux *props* , qui sont des attributs passés à un composant Astro disponibles pour une utilisation dans votre composant avec `Astro.props` , *les emplacements* restituent les éléments HTML enfants là où ils sont placés. :::
+:::note Contrairement aux *props*, qui sont des attributs passés à un composant Astro disponibles pour une utilisation dans votre composant avec `Astro.props`, *les emplacements* restituent les éléments HTML enfants là où ils sont placés. :::
 
 ```astro "<slot />"
 ---
@@ -348,11 +350,11 @@ import Footer from './Footer.astro';
 const { title } = Astro.props
 ---
 <div id="content-wrapper">
-<Header />
-<Logo />
-<h1>{title}</h1>
-<slot /> <!-- les élement enfants seront insérés ici -->
-<Footer />
+  <Header />
+  <Logo />
+  <h1>{title}</h1>
+  <slot /> <!-- les élement enfants seront insérés ici -->
+  <Footer />
 </div>
 ```
 
@@ -369,13 +371,13 @@ import Wrapper from '../components/Wrapper.astro';
 </Wrapper>
 ```
 
-Ce modèle est à la base d'un Composant Layout dans Astro : une page entière de contenu HTML peut être "enveloppée" avec des balises `<Layout></Layout>` et envoyée à au Composant Layout pour être rendu à l'intérieur des éléments de page communs.
+Ce modèle est la base d'un Composant Layout dans Astro : une page entière de contenu HTML peut être "enveloppée" avec des balises `<Layout></Layout>` et envoyée à au Composant Layout pour être rendu à l'intérieur des éléments de page communs.
 
 ### Les emplacements nommés
 
-Un composant Astro peut également avoir des emplacements nommés. Cela vous permet de ne faire passer que des éléments HTML avec le nom d'emplacement (slot) correspondant, au niveau de l'emplacement.
+Un composant Astro peut aussi avoir des emplacements nommés. Cela vous permet de ne faire passer que des éléments HTML avec le nom d'emplacement (slot) correspondant, au niveau de l'emplacement.
 
-```astro /<slot .*?/>/
+```astro /<slot.*?/>/
 ---
 // src/components/Wrapper.astro
 import Header from './Header.astro';
@@ -409,13 +411,15 @@ import Wrapper from '../components/Wrapper.astro';
 </Wrapper>
 ```
 
-Utilisez un attribut `slot="my-slot"` sur l'élément enfant que vous souhaitez transmettre à un emplacement `<slot name="my-slot" />` correspondant dans votre composant.
+Utilisez un attribut `slot="my-slot"` sur l'élément enfant que vous voulez passer à un emplacement correspondant `<slot name="my-slot" />` dans votre composant.
 
-:::tip Les emplacements nommés peuvent aussi être passés aux [composants de framework](/fr/core-concepts/framework-components/) ! :::
+:::tip
+Les emplacements nommés peuvent aussi être passés aux [composants de framework](/fr/core-concepts/framework-components/) !
+:::
 
-### Contenu de repli pour les emplacement
+### Contenu par defaut pour les emplacement
 
-Les emplacements peuvent également restituer **du contenu de repli** . Lorsqu'il n'y a pas d'enfants correspondants passés à un emplacement, un élément `<slot />` fera le rendu de ses propres enfants.
+Les emplacements peuvent également restituer **du contenu par defaut**. Lorsqu'il n'y a pas d'enfants correspondants passés à un emplacement, un élément `<slot />` affichera ses propres enfants.
 
 ```astro {14}
 ---
@@ -431,7 +435,7 @@ const { title } = Astro.props
   <Logo />
   <h1>{title}</h1>
   <slot>
-    <p>Ceci est mon contenu de repli, s'il n'y a pas d'enfants passés à l'emplacement</p>
+    <p>Ceci est mon contenu par defaut, s'il n'y a pas d'enfants passés à l'emplacement</p>
   </slot>
   <Footer />
 </div>
@@ -439,23 +443,25 @@ const { title } = Astro.props
 
 ## Styles CSS
 
-Les balises CSS `<style>` sont également prises en charge à l'intérieur du template du composant.
+Les balises CSS `<style>` sont également permises dans le template du composant.
 
-Ils peuvent être utilisés pour styliser vos composants, et toutes les règles de style sont automatiquement limitées à la portée du composant lui-même pour éviter les conflits CSS dans les applications volumineuses.
+Elles peuvent être utilisées pour donner du style à vos composants, et toutes les règles de style sont automatiquement limitées à la portée du composant lui-même pour éviter les conflits CSS dans les applications volumineuses.
 
 ```astro title="src/components/StyledHeading.astro"
 ---
 // Le script du composant ici !
 ---
 <style>
-  /* limité à la portée du composant, les autres H1 de la page seront inchangés */
+  /* restreint au composant, les autres balises H1 de la page resteront inchangés */
   h1 { color: red }
 </style>
 
 <h1>Hello, world!</h1>
 ```
 
-:::caution Les styles définis ici s'appliquent uniquement au contenu écrit directement dans le template du composant lui-même. Les enfants et tous les composants importés ne seront **pas** stylisés par défaut. :::
+:::caution
+Les styles définis ici s'appliquent uniquement au contenu écrit directement dans le template du composant lui-même. Les enfants et tous les composants importés ne seront **pas** stylisés par défaut.
+:::
 
 📚 Allez voir notre [Guide des styles](/fr/core-concepts/framework-components/) pour plus d'informations sur l'application de styles.
 
@@ -483,7 +489,7 @@ Les scripts peuvent être utilisés pour ajouter des écouteurs d'événements, 
 </script>
 ```
 
-Par défaut, Astro traite et regroupe les balises `<script>` , ajoutant la prise en charge de l'importation de modules npm, de l'écriture de TypeScript, etc.
+Par défaut, les balises `<script>` sont optimisées par Astro, ajoutant la prise en charge de l'importation de modules npm, de l'écriture de TypeScript, etc.
 
 📚 Consultez notre [guide sur les scripts](/fr/guides/client-side-scripts/) pour plus de détails.
 
@@ -494,13 +500,13 @@ Astro prend en charge l'importation et l'utilisation de fichiers `.html` en tant
 Les composants HTML ne doivent contenir que du code HTML valide et ne disposent donc pas des fonctionnalités clés des composants Astro :
 
 - Ils ne prennent pas en charge de Script de Composant, les importations côté serveur ou les expressions dynamiques.
-- Toutes les balises `<script>` sont laissées non regroupées, traitées comme si elles avaient `is:inline` .
-- Ils ne peuvent [référencer que les assets qui se trouvent dans le dossier `public/`](/fr/guides/images/#public) .
+- Toutes les balises `<script>` sont laissées non regroupées, traitées comme si elles avaient `is:inline`.
+- Ils ne peuvent [référencer que les assets qui se trouvent dans le dossier `public/`](/fr/guides/images/#public).
 
-:::note Un [élément `<slot />`](#les-emplacements) à l'intérieur d'un composant HTML fonctionnera comme il le ferait dans un composant Astro. Pour utiliser l'élément [Slot des Web Components (composants web)](https://developer.mozilla.org/fr/docs/Web/HTML/Element/slot)  à la place, ajoutez `is:inline` à votre élément `<slot>` . :::
+:::note Un [élément `<slot />`](#les-emplacements-slots) à l'intérieur d'un composant HTML fonctionnera comme il le ferait dans un composant Astro. Pour utiliser l'élément [Slot des Web Components (composants web)](https://developer.mozilla.org/fr/docs/Web/HTML/Element/slot)  à la place, ajoutez `is:inline` à votre élément `<slot>`. :::
 
 ## Étapes suivantes
 
-📚 En savoir plus sur [les composants intégrés d'Astro](/fr/reference/api-reference/#built-in-components) .
+📚 En savoir plus sur les [composants intégrés d'Astro](/fr/reference/api-reference/#built-in-components).
 
-📚 Apprendre comment utiliser [les composants de framework JavaScript](/fr/core-concepts/framework-components/) dans votre projet Astro.
+📚 Apprendre comment utiliser les [composants de framework JavaScript](/fr/core-concepts/framework-components/) dans votre projet Astro.
