fix: admonitions syntax

--- a/src/pages/fr/core-concepts/astro-components.mdx
+++ b/src/pages/fr/core-concepts/astro-components.mdx
@@ -67,7 +67,9 @@ const data = await fetch('SOME_SECRET_API_URL/users').then(r => r.json());
 
 Les barres de code sont conçues pour garantir que le code JavaScript que vous écrivez à l'intérieur "ne puisse pas s'échapper". Ce code n'apparaîtra pas dans le code final de votre page et ne sera pas visible à vos utilisateur. Vous pouvez écrire du code JavaScript coûteux (en terme de performance) ou sensible (comme un appel à votre base de données privée) sans vous soucier qu'il se retrouve dans le navigateur l'utilisateur.
 
-:::tip Vous pouvez même écrire du TypeScript dans votre script de composant ! :::
+:::tip
+Vous pouvez même écrire du TypeScript dans votre script de composant !
+:::
 
 ### Le Template du composant
 
@@ -278,7 +280,9 @@ Dans Astro, vous pouvez utiliser des commentaires HTML standard ou des commentai
 {/* La syntaxe des commentaires JS est également valide */}
 ```
 
-:::caution Les commentaires de style HTML seront inclus dans le DOM du navigateur, tandis que ceux en JS seront ignorés. Pour laisser des messages TODO ou d'autres explications réservées au développement, vous pouvez utiliser des commentaires de style JavaScript à la place. :::
+:::caution
+Les commentaires de style HTML seront inclus dans le DOM du navigateur, tandis que ceux en JS seront ignorés. Pour laisser des messages TODO ou d'autres explications réservées au développement, vous pouvez utiliser des commentaires de style JavaScript à la place.
+:::
 
 ## Props de composant
 
@@ -338,7 +342,9 @@ L'élément `<slot />` est un emplacement réservé pour du contenu HTML externe
 
 Par défaut, tous les éléments enfants passés à un composant seront rendus dans son `<slot />`
 
-:::note Contrairement aux *props*, qui sont des attributs passés à un composant Astro disponibles pour une utilisation dans votre composant avec `Astro.props`, *les emplacements* restituent les éléments HTML enfants là où ils sont placés. :::
+:::note
+Contrairement aux *props*, qui sont des attributs passés à un composant Astro disponibles pour une utilisation dans votre composant avec `Astro.props`, *les emplacements* restituent les éléments HTML enfants là où ils sont placés.
+:::
 
 ```astro "<slot />"
 ---
@@ -503,7 +509,9 @@ Les composants HTML ne doivent contenir que du code HTML valide et ne disposent 
 - Toutes les balises `<script>` sont laissées non regroupées, traitées comme si elles avaient `is:inline`.
 - Ils ne peuvent [référencer que les assets qui se trouvent dans le dossier `public/`](/fr/guides/images/#public).
 
-:::note Un [élément `<slot />`](#les-emplacements-slots) à l'intérieur d'un composant HTML fonctionnera comme il le ferait dans un composant Astro. Pour utiliser l'élément [Slot des Web Components (composants web)](https://developer.mozilla.org/fr/docs/Web/HTML/Element/slot)  à la place, ajoutez `is:inline` à votre élément `<slot>`. :::
+:::note
+Un [élément `<slot />`](#les-emplacements-slots) à l'intérieur d'un composant HTML fonctionnera comme il le ferait dans un composant Astro. Pour utiliser l'élément [Slot des Web Components (composants web)](https://developer.mozilla.org/fr/docs/Web/HTML/Element/slot)  à la place, ajoutez `is:inline` à votre élément `<slot>`.
+:::
 
 ## Étapes suivantes
 
