last of breaking changes as guides

--- a/src/pages/en/upgrade-astro.mdx
+++ b/src/pages/en/upgrade-astro.mdx
@@ -369,9 +369,14 @@ Revisit your Markdown and MDX configuration and compare your existing config wit
 
 ### Added: Plugin access to frontmatter
 
-Astro 2.0 gives remark and rehype plugins access to user frontmatter via frontmatter injection. This means `data.astro.frontmatter` is now the _complete_ Markdown or MDX document's frontmatter, rather than an empty object.
+Astro 2.0 gives remark and rehype plugins access to user frontmatter via frontmatter injection. This allows plugin authors to modify a user's existing frontmatter, or compute new properties based on other properties.
 
-This allows plugin authors to modify existing frontmatter, or compute new properties based on other properties. For example, to compute a full image URL based on an `imageSrc` slug in your document frontmatter:
+
+#### What should I do?
+
+If you have written remark or rehype plugins for Astro, note that `data.astro.frontmatter` is now the _complete_ Markdown or MDX document's frontmatter, rather than an empty object. You may need to update your plugin accordingly.
+ 
+And, with access to a file's frontmatter, you can now write plugins that use this data! For example, to compute a full image URL based on an `imageSrc` slug in your document frontmatter:
 
   ```ts
   export function remarkInjectSocialImagePlugin() {
@@ -384,9 +389,11 @@ This allows plugin authors to modify existing frontmatter, or compute new proper
 
 ### Added: `src/content/`
 
-In 2.0, the [Collections API is no longer hidden behind an experimental flag](#content-collections). This API reserves `src/content/` as a special folder. 
+In 2.0, the [Collections API is no longer hidden behind an experimental flag](#content-collections). This API reserves `src/content/` as a special folder.
 
-If you have an existing `src/content/` folder, it must be renamed to avoid conflicts. This folder can now only be used for [content collections](/en/guides/content-collections/).
+#### What should I do?
+
+If you have an existing `src/content/` folder, it must be renamed to avoid conflicts. This special folder can now only be used for [content collections](/en/guides/content-collections/).
 
 ## Astro 2.0 Experimental Flags Removed
 
