--- a/src/pages/en/upgrade-astro.mdx
+++ b/src/pages/en/upgrade-astro.mdx
@@ -211,7 +211,7 @@ Astro 2.0 removes this option entirely. `Astro.canonicalURL()` in your code will
 
 #### What should I do?
 
-Use `Astro.url` to construct the canonical URL.
+Use `Astro.url` to construct a canonical URL.
 
 ```js
 const canonicalURL = new URL(Astro.url.pathname, Astro.site);
