--- a/src/pages/fr/core-concepts/layouts.mdx
+++ b/src/pages/fr/core-concepts/layouts.mdx
@@ -8,7 +8,7 @@ description: >-
 
 Les **Layouts** (ou "mise-en-pages" en français) sont des [composants Astro](/fr/core-concepts/astro-components/) utilisés pour fournir une structure d'interface utilisateur réutilisable, comme un modèle de page.
 
-Par convention, nous utilisons le terme "layout" pour les composants Astro qui fournissent des éléments d'interface utilisateur commun à toutes les pages, tels que les en-têtes, les barres de navigation et les pieds de page. Un composant de layout typique d'Astro fournit [aux pages Astro, Markdown ou MDX](/fr/core-concept/astro-pages/) les éléments suivants :
+Par convention, nous utilisons le terme "mise en page" pour les composants Astro qui fournissent des éléments d'interface utilisateur commun à toutes les pages, tels que les en-têtes, les barres de navigation et les pieds de page. Un composant de layout typique d'Astro fournit [aux pages Astro, Markdown ou MDX](/fr/core-concept/astro-pages/) les éléments suivants :
 - une **page shell** (`<html>`, `<head>` et `<body>` tags)
 - un [**`<slot />`**](/fr/core-concepts/astro-components/#slots) pour spécifier où le contenu de chaque page doit être injecté.
 
