--- a/src/pages/fr/core-concepts/layouts.mdx
+++ b/src/pages/fr/core-concepts/layouts.mdx
@@ -14,7 +14,7 @@ Par convention, nous utilisons le terme "mise en page" pour les composants Astro
 
 Mais, un composant de mise en page n'a rien de spécial ! Ils peuvent [accepter des propriétés](fr/core-concepts/astro-components/#propriétés-de-composants) et [importer et utiliser d'autres composants](/fr/core-concepts/astro-components/#vue-densemble-des-composants) comme n'importe quel autre composant Astro. Ils peuvent inclure [des composants de frameworks d'interface utilisateur](/fr/core-concepts/framework-components/) et [des scripts côté client](/fr/core-concepts/astro-components/#scripts-côté-client). Ils ne doivent même pas fournir une page shell complète, et peuvent plutôt être utilisés comme des modèles d'interface utilisateur partielle.
 
-Les composants Layout sont généralement placés dans un dossier `src/layouts` dans votre projet pour l'organisation, mais ce n'est pas une obligation.
+Les composants de mise en pages sont généralement placés dans un dossier `src/layouts` dans votre projet pour l'organisation, mais ce n'est pas une obligation.
 
 ## Exemple de Layout
 
