--- a/src/pages/fr/core-concepts/layouts.mdx
+++ b/src/pages/fr/core-concepts/layouts.mdx
@@ -52,7 +52,7 @@ const { title } = Astro.props
 import MySiteLayout from '../layouts/MySiteLayout.astro';
 ---
 <MySiteLayout title="Page d'accueil">
-  <p>Le contenu de ma page, enveloppé dans un layout !</p>
+  <p>Le contenu de ma page, enveloppé dans une mise en page !</p>
 </MySiteLayout>
 ```
 
