--- a/src/pages/fr/core-concepts/layouts.mdx
+++ b/src/pages/fr/core-concepts/layouts.mdx
@@ -60,7 +60,7 @@ import MySiteLayout from '../layouts/MySiteLayout.astro';
 
 ## Layouts Markdown/MDX
 
-Les Layouts de page sont particulièrement utiles pour [les pages Markdown et MDX](/fr/guides/markdown-content/#markdown-and-mdx-pages) qui, autrement, n'aurait pas de formatage de page.
+Les mises en page sont particulièrement utiles pour [les pages Markdown et MDX](/fr/guides/markdown-content/#markdown-and-mdx-pages) qui, autrement, n'auraient pas de formatage de page.
 
 Astro fournit une propriété spéciale `layout` frontmatter pour spécifier le composant `.astro` à utiliser comme mise en page.
 
