--- a/src/pages/fr/core-concepts/layouts.mdx
+++ b/src/pages/fr/core-concepts/layouts.mdx
@@ -58,7 +58,7 @@ import MySiteLayout from '../layouts/MySiteLayout.astro';
 
 📚 Apprenez-en plus sur [les Slots](/fr/core-concepts/astro-components/#slots).
 
-## Layouts Markdown/MDX
+## Mises en page Markdown/MDX
 
 Les mises en page sont particulièrement utiles pour [les pages Markdown et MDX](/fr/guides/markdown-content/#markdown-and-mdx-pages) qui, autrement, n'auraient pas de formatage de page.
 
