--- a/src/pages/fr/core-concepts/layouts.mdx
+++ b/src/pages/fr/core-concepts/layouts.mdx
@@ -66,7 +66,7 @@ Astro fournit une propriété spéciale `layout` frontmatter pour spécifier le 
 
 ## Inclure des Layouts
 
-Les composants Layout ne nécessitent pas contenir une page HTML complète. Vous pouvez découper vos Layouts en composants plus petits, et ensuite réutiliser ces composants pour créer des Layouts plus flexibles et puissants dans votre projet.
+Les composants de mise en page ne nécessitent pas de contenir une page HTML complète. Vous pouvez découper vos mises en page en composants plus petits, et ensuite réutiliser ces composants pour créer des mises en page plus flexibles et puissantes dans votre projet.
 
 Par exemple, un Layout commun pour les articles de blog peut afficher un titre, une date et un auteur. Un composant Layout `BlogPostLayout.astro` pourrait ajouter cette UI à la page et aussi utiliser un Layout plus général pour gérer le reste de votre page.
 
