--- a/src/pages/fr/core-concepts/layouts.mdx
+++ b/src/pages/fr/core-concepts/layouts.mdx
@@ -226,7 +226,7 @@ const { title } = Astro.props.frontmatter || Astro.props;
 </html>
 ```
 
-## Layouts d'emboîtement
+## Mises en page d'emboîtement
 
 Les composants layout ne doivent pas nécessairement contenir une page entière de HTML. Vous pouvez décomposer vos layouts en composants plus petits et combiner des composants layout pour créer des templates de page encore plus flexibles. 
 
