--- a/src/pages/fr/core-concepts/layouts.mdx
+++ b/src/pages/fr/core-concepts/layouts.mdx
@@ -230,7 +230,7 @@ const { title } = Astro.props.frontmatter || Astro.props;
 
 Les composants de mises en pages ne doivent pas nécessairement contenir une page entière de HTML. Vous pouvez décomposer vos layouts en composants plus petits et combiner des composants layout pour créer des templates de page encore plus flexibles. 
 
-Par exemple, un composant de layout `BlogPostLayout.astro` peut styliser le titre, la date et l'auteur d'un article. Ensuite, un `BaseLayout.astro` pour tout le site pourrait gérer le reste de votre template de page, comme la navigation et les pieds de page. Vous pouvez également transmettre les propriétés reçues de votre message à un autre layout, comme tout autre composant imbriqué.
+Par exemple, un composant de mise en page `BlogPostLayout.astro` peut styliser le titre, la date et l'auteur d'un article. Ensuite, un `BaseLayout.astro` pour tout le site pourrait gérer le reste de votre template de page, comme la navigation et les pieds de page. Vous pouvez également transmettre les propriétés reçues de votre message à une autre mise en page, comme tout autre composant imbriqué.
 
 **`src/layouts/BlogPostLayout.astro`**
 
