--- a/src/pages/fr/core-concepts/layouts.mdx
+++ b/src/pages/fr/core-concepts/layouts.mdx
@@ -56,7 +56,7 @@ import MySiteLayout from '../layouts/MySiteLayout.astro';
 </MySiteLayout>
 ```
 
-📚 Apprenez-en plus sur [les Slots](/fr/core-concepts/astro-components/#slots).
+📚 Apprenez-en plus sur [les Slots](/fr/core-concepts/astro-components/#les-emplacements-slots).
 
 ## Mises en page Markdown/MDX
 
