--- a/src/pages/fr/core-concepts/layouts.mdx
+++ b/src/pages/fr/core-concepts/layouts.mdx
@@ -86,7 +86,7 @@ Vous pouvez l'utiliser dans les fichiers Markdown et MDX situés dans `src/pages
 
 Un layout typique pour les pages Markdown ou MDX inclut :
 1. La propriété `frontmatter` pour accéder au frontmatter et aux autres données de la page Markdown ou MDX.
-2. Un [`<slot />`](/fr/core-concepts/astro-components/#slots) par défaut pour indiquer où le contenu Markdown/MDX de la page doit être rendu.
+2. Un [`<slot />`](/fr/core-concepts/astro-components/#les-emplacements-slots) par défaut pour indiquer où le contenu Markdown/MDX de la page doit être rendu.
 
 ```astro /(?<!//.*){?frontmatter(?:\\.\w+)?}?/ "<slot />"
 ---
